--- a/apps/token-sale/index.html
+++ b/apps/token-sale/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <title>REAL Token Sale</title>
+    <title>$REAL Token Sale</title>
   </head>
   <body>
     <div id="root"></div>
