--- a/apps/token-sale/index.html
+++ b/apps/token-sale/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
+    <link href="/$REAL.svg" rel="icon" media="(prefers-color-scheme: light)" />
+    <link href="/$REAL.svg" rel="icon" media="(prefers-color-scheme: dark)" />
     <title>$REAL Token Sale</title>
   </head>
   <body>
